--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="caja">Cualidad 3</div>
             <div class="caja">Cualidad 4</div>
             <div class="caja4feffe">Cualidad 6</div>
-            <div><p>fefe</p></div>
+            <div><p>feflipee</p></div>
         </main>
     </body>
 </html>
