--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
-<html lang="ES">
-    <head>
-        <meta charset="UTF-8">
-        <title>Prueba</title>
-        <meta name="viewport" content="width = device-width,initial-scale=1">
-        <link rel="Stylesheet" href="style.css">
-    </head>
-
-    <body>
-        <main id="main-wrapper">
-            <div class="caja">Cualidad 1</div>
-            <div class="caja">Cualidad 2</div>
-            <div class="caja">Cualidad 3</div>
-            <div class="caja">Cualidad 4</div>
-            <div class="caja4feffe">Cualidad 6</div>
-            <div><p>feflipee</p></div>
-        </main>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Estrellame</title>
+    <meta link="icon" type="image/x-icon" href="favicon.ico">
+    <link rel=Stylesheet href="css/style.css">
+</head>
+<body>
+    <main>
+        <section class="login">
+            <div class="login-wrapper">
+                <h1 class="login-title">Estrellame</h1>
+                <p class="login-text">Ingresa tu email</p>
+                <input type="text" placeholder="Correo electronico" class="login-input-email">
+                <button class="login-button">Ingresar</button>
+            </div>
+        </section>
+    </main>
+    <script src="js/script.js"></script>
+</body>
 </html>
